# Jove.nvim

./: .gitignore  README.md  features.md  noicehistory.md  nvim_init.lua  pyproject.toml  test.ipynb  test.py  test_kitty.lua  todo.md
autoload/am_i_neokernel/: init.lua  kernel.lua  output.lua
autoload/jove/: init.lua
doc/: am_i_neokernel.txt  jove.txt  tags
lua/: am_i_neokernel.lua  jove.lua
lua/am_i_neokernel/: commands.lua  kernel.lua  message.lua  output.lua
lua/jove/: ansi.lua  cells.lua  commands.lua  highlight.lua  image_renderer.lua  kernel.lua  log.lua  message.lua  output.lua  state.lua  status.lua  ui.lua
lua/jove/term-image/: adapter.lua  emulator.lua
lua/jove/term-image/drivers/: iip.lua
plugin/: am_i_neokernel.vim  jove.lua  jove.vim
python/: image_renderer.py  popup_renderer.py  py_kernel_client.py  todo.md  universal_image_handler.py
